fix overflow on page content elements in css

--- a/src/assets/scss/_responsive.scss
+++ b/src/assets/scss/_responsive.scss
@@ -9,8 +9,6 @@
   .hide-for-small {
     display: none !important;
   }
-  .page-full-content,
-  .post-full-content,
   .post-comments {
     overflow-x: hidden;
   }
